@@ -6609,7 +6609,7 @@ report_description_option:
 | _with CODE _is id_or_lit
   {
 	check_repeated ("CODE", SYN_CLAUSE_2, &check_duplicate);
-	CB_PENDING ("CODE clause");
+	current_report->code_clause = $3;
   }
 | control_clause
 | page_limit_clause
