@@ -1396,12 +1396,18 @@ typedef struct cob_report_ {
 	unsigned int		first_generate:1;	/* Ready for first GENERATE */
 	unsigned int		initiate_done:1;	/* INITIATE has been done */
 	unsigned int		next_line:1;		/* Advance to line on next DETAIL */
+
 	unsigned int		next_line_plus:1;	/* Advance to plus line on next DETAIL */
 	unsigned int		next_page:1;		/* Advance to next page on next DETAIL */
 	unsigned int		next_just_set:1;	/* NEXT xxx was just set so ignore */
 	unsigned int		in_report_footing:1;	/* doing report footing now */
 	unsigned int		incr_line:1;		/* 'curr_lines' should be incremented */
 	unsigned int		foot_next_page:1;	/* Advance to next page after all CONTROL footings */
+	unsigned int		code_is_present:1;	/* CODE IS present */
+	unsigned int		unused:17;		/* Use these bits up next */
+
+	int			code_len;		/* Length to use for holding 'CODE IS' value */
+	char			*code_is;		/* Value of CODE IS for this report */
 } cob_report;
 /***************************/
 /* End of Report structure */
