@@ -1,4 +1,9 @@
 
+2017-12-21  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: For REPORT pass CODE value to report structure
+	* parser.y: pass back CODE value
+
 2017-12-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* scanner.l (read_literal): fix endless loop on invalid literals for
